--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
-matplotlib==3.8.2
-numpy==1.23.4
-pandas==2.2.0
-python-dotenv==1.0.1
-scikit_learn==1.4.0
-scipy==1.12.0
+matplotlib==3.8.4
+numpy==1.26.4
+pandas==2.2.2
+protobuf==5.26.1
+scikit_learn==1.4.2
 seaborn==0.13.2
-statsmodels==0.14.1
-tensorboard==2.10.1
-tensorflow==2.13.1
-tensorflow_intel==2.10.0
-tqdm==4.66.1
-yfinance==0.2.36
+tensorflow==2.15.1
+tqdm==4.66.2
+transformers==4.39.3
