--- a/environment.yml
+++ b/environment.yml
@@ -5,136 +5,166 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
-  - asttokens=2.4.1=pyhd8ed1ab_0
-  - bzip2=1.0.8=h5eee18b_5
-  - ca-certificates=2024.3.11=h06a4308_0
-  - comm=0.2.2=pyhd8ed1ab_0
-  - cudatoolkit=11.8.0=h4ba93d1_13
-  - debugpy=1.6.7=py311h6a678d5_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - exceptiongroup=1.2.0=pyhd8ed1ab_2
-  - executing=2.0.1=pyhd8ed1ab_0
-  - importlib-metadata=7.1.0=pyha770c72_0
-  - importlib_metadata=7.1.0=hd8ed1ab_0
-  - ipykernel=6.29.3=pyhd33586a_0
-  - ipython=8.22.2=pyh707e725_0
-  - jedi=0.19.1=pyhd8ed1ab_0
-  - jupyter_client=8.6.1=pyhd8ed1ab_0
-  - jupyter_core=5.7.2=py311h38be061_0
-  - ld_impl_linux-64=2.38=h1181459_1
-  - libffi=3.4.4=h6a678d5_0
+  - bzip2=1.0.8=hd590300_5
+  - ca-certificates=2024.2.2=hbcca054_0
+  - ld_impl_linux-64=2.40=h41732ed_0
+  - libexpat=2.6.2=h59595ed_0
+  - libffi=3.4.2=h7f98852_5
   - libgcc-ng=13.2.0=h807b86a_5
   - libgomp=13.2.0=h807b86a_5
-  - libsodium=1.0.18=h36c2ea0_1
-  - libstdcxx-ng=13.2.0=h7e041cc_5
-  - libuuid=1.41.5=h5eee18b_0
-  - matplotlib-inline=0.1.7=pyhd8ed1ab_0
-  - ncurses=6.4=h6a678d5_0
-  - nest-asyncio=1.6.0=pyhd8ed1ab_0
-  - openssl=3.2.1=hd590300_1
-  - packaging=24.0=pyhd8ed1ab_0
-  - parso=0.8.4=pyhd8ed1ab_0
-  - pexpect=4.9.0=pyhd8ed1ab_0
-  - pickleshare=0.7.5=py_1003
-  - platformdirs=4.2.0=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.42=pyha770c72_0
-  - psutil=5.9.8=py311h459d7ec_0
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pure_eval=0.2.2=pyhd8ed1ab_0
-  - pygments=2.17.2=pyhd8ed1ab_0
-  - python=3.11.8=h955ad1f_0
-  - python-dateutil=2.9.0=pyhd8ed1ab_0
-  - python_abi=3.11=2_cp311
-  - pyzmq=25.1.2=py311h6a678d5_0
-  - readline=8.2=h5eee18b_0
-  - setuptools=68.2.2=py311h06a4308_0
-  - six=1.16.0=pyh6c4a22f_0
-  - sqlite=3.41.2=h5eee18b_0
-  - stack_data=0.6.2=pyhd8ed1ab_0
-  - tk=8.6.12=h1ccaba5_0
-  - tornado=6.4=py311h459d7ec_0
-  - traitlets=5.14.2=pyhd8ed1ab_0
-  - typing_extensions=4.11.0=pyha770c72_0
-  - wcwidth=0.2.13=pyhd8ed1ab_0
-  - wheel=0.41.2=py311h06a4308_0
-  - xz=5.4.6=h5eee18b_0
-  - zeromq=4.3.5=h6a678d5_0
-  - zipp=3.17.0=pyhd8ed1ab_0
-  - zlib=1.2.13=h5eee18b_0
+  - libnsl=2.0.1=hd590300_0
+  - libsqlite=3.45.2=h2797004_0
+  - libuuid=2.38.1=h0b41bf4_0
+  - libxcrypt=4.4.36=hd590300_1
+  - libzlib=1.2.13=hd590300_5
+  - ncurses=6.4=h59595ed_2
+  - openssl=3.2.1=hd590300_0
+  - pip=24.0=pyhd8ed1ab_0
+  - python=3.11.8=hab00c5b_0_cpython
+  - readline=8.2=h8228510_1
+  - setuptools=69.2.0=pyhd8ed1ab_0
+  - tk=8.6.13=noxft_h4845f30_101
+  - wheel=0.42.0=pyhd8ed1ab_0
+  - xz=5.2.6=h166bdaf_0
   - pip:
       - absl-py==2.1.0
+      - appdirs==1.4.4
       - astunparse==1.6.3
+      - attrs==23.2.0
+      - backcall==0.2.0
+      - beautifulsoup4==4.12.3
+      - bleach==6.1.0
       - cachetools==5.3.3
       - certifi==2024.2.2
       - charset-normalizer==3.3.2
-      - filelock==3.13.4
-      - flatbuffers==24.3.25
+      - cloudpickle==3.0.0
+      - contourpy==1.2.0
+      - cycler==0.12.1
+      - defusedxml==0.7.1
+      - dm-reverb==0.14.0
+      - dm-tree==0.1.8
+      - docopt==0.6.2
+      - exchange-calendars==4.5.3
+      - fastjsonschema==2.19.1
+      - filelock==3.13.3
+      - flatbuffers==24.3.7
+      - fonttools==4.49.0
+      - frozendict==2.4.0
       - fsspec==2024.3.1
       - gast==0.5.4
-      - google-auth==2.29.0
+      - gin-config==0.5.0
+      - google-auth==2.28.2
       - google-auth-oauthlib==1.2.0
       - google-pasta==0.2.0
       - grpcio==1.62.1
-      - h5py==3.11.0
+      - gym==0.23.0
+      - gym-notices==0.0.8
+      - h5py==3.10.0
+      - html5lib==1.1
       - huggingface-hub==0.22.2
-      - idna==3.7
-      - joblib==1.4.0
+      - idna==3.6
+      - ipython==8.12.3
+      - jinja2==3.1.3
+      - joblib==1.3.2
+      - jsonschema==4.21.1
+      - jsonschema-specifications==2023.12.1
+      - jupyterlab-pygments==0.3.0
       - keras==2.15.0
-      - libclang==18.1.1
-      - markdown==3.6
+      - kiwisolver==1.4.5
+      - korean-lunar-calendar==0.3.1
+      - libclang==16.0.6
+      - lxml==5.1.0
+      - markdown==3.5.2
       - markdown-it-py==3.0.0
       - markupsafe==2.1.5
+      - matplotlib==3.8.3
       - mdurl==0.1.2
+      - mistune==3.0.2
       - ml-dtypes==0.3.2
-      - namex==0.0.8
+      - mpmath==1.3.0
+      - multitasking==0.0.11
+      - namex==0.0.7
+      - nbclient==0.10.0
+      - nbconvert==7.16.3
+      - nbformat==5.10.3
+      - networkx==3.3
       - numpy==1.26.4
-      - nvidia-cublas-cu12==12.2.5.6
-      - nvidia-cuda-cupti-cu12==12.2.142
+      - nvidia-cublas-cu12==12.1.3.1
+      - nvidia-cuda-cupti-cu12==12.1.105
       - nvidia-cuda-nvcc-cu12==12.2.140
-      - nvidia-cuda-nvrtc-cu12==12.2.140
-      - nvidia-cuda-runtime-cu12==12.2.140
-      - nvidia-cudnn-cu12==8.9.4.25
-      - nvidia-cufft-cu12==11.0.8.103
-      - nvidia-curand-cu12==10.3.3.141
-      - nvidia-cusolver-cu12==11.5.2.141
-      - nvidia-cusparse-cu12==12.1.2.141
-      - nvidia-nccl-cu12==2.16.5
+      - nvidia-cuda-nvrtc-cu12==12.1.105
+      - nvidia-cuda-runtime-cu12==12.1.105
+      - nvidia-cudnn-cu12==8.9.2.26
+      - nvidia-cufft-cu12==11.0.2.54
+      - nvidia-curand-cu12==10.3.2.106
+      - nvidia-cusolver-cu12==11.4.5.107
+      - nvidia-cusparse-cu12==12.1.0.106
+      - nvidia-nccl-cu12==2.19.3
       - nvidia-nvjitlink-cu12==12.2.140
+      - nvidia-nvtx-cu12==12.1.105
       - oauthlib==3.2.2
       - opt-einsum==3.3.0
-      - optree==0.11.0
-      - pandas==2.2.2
-      - pip==24.0
+      - optree==0.10.0
+      - pandas==2.2.1
+      - pandas-market-calendars==4.4.0
+      - pandas-ta==0.3.14b0
+      - pandocfilters==1.5.1
+      - peewee==3.17.1
+      - pickleshare==0.7.5
+      - pillow==10.2.0
+      - pipreqs==0.5.0
+      - portpicker==1.6.0
       - protobuf==4.25.3
-      - pyasn1==0.6.0
-      - pyasn1-modules==0.4.0
+      - pyarrow==11.0.0
+      - pyasn1==0.5.1
+      - pyasn1-modules==0.3.0
+      - pygame==2.1.3
+      - pyluach==2.2.0
+      - pyparsing==3.1.2
       - pytz==2024.1
       - pyyaml==6.0.1
-      - regex==2024.4.16
+      - referencing==0.34.0
+      - regex==2023.12.25
       - requests==2.31.0
-      - requests-oauthlib==2.0.0
+      - requests-oauthlib==1.4.0
+      - reverb==2.0.1
       - rich==13.7.1
+      - rlds==0.1.8
+      - rpds-py==0.18.0
       - rsa==4.9
-      - safetensors==0.4.3
-      - scikit-learn==1.4.2
-      - scipy==1.13.0
+      - safetensors==0.4.2
+      - scikit-learn==1.4.1.post1
+      - scipy==1.12.0
+      - soupsieve==2.5
+      - sympy==1.12
+      - ta==0.11.0
       - tensorboard==2.15.2
       - tensorboard-data-server==0.7.2
       - tensorflow==2.15.1
       - tensorflow-estimator==2.15.0
+      - tensorflow-hub==0.16.1
       - tensorflow-io-gcs-filesystem==0.36.0
-      - tensorrt==10.0.0b6
-      - tensorrt-cu12==10.0.0b6
-      - tensorrt-cu12-bindings==10.0.0b6
-      - tensorrt-cu12-libs==10.0.0b6
+      - tensorflow-probability==0.23.0
+      - tensorflow-text==2.15.0
       - termcolor==2.4.0
-      - tf-keras==2.16.0
-      - threadpoolctl==3.4.0
+      - tf-agents==0.19.0
+      - tf-keras==2.15.1
+      - tf-slim==1.1.0
+      - threadpoolctl==3.3.0
+      - tinycss2==1.2.1
       - tokenizers==0.15.2
+      - toolz==0.12.1
+      - torch==2.2.2
+      - torchdata==0.7.1
       - tqdm==4.66.2
-      - transformers==4.39.3
+      - transformers==4.38.2
+      - triton==2.2.0
+      - typing-extensions==4.11.0
       - tzdata==2024.1
       - urllib3==2.2.1
-      - werkzeug==3.0.2
+      - webencodings==0.5.1
+      - werkzeug==3.0.1
       - wrapt==1.14.1
-prefix: /home/adamd1985/anaconda3/envs/quant
+      - yarg==0.1.9
+      - yfinance==0.2.37
+prefix: /home/radmada/miniconda3/envs/quant
