--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-matplotlib==3.8.4
+matplotlib==3.8.3
 numpy==1.26.4
 pandas==2.2.2
 protobuf==5.26.1
-scikit_learn==1.4.2
+scikit_learn==1.4.1.post1
 seaborn==0.13.2
 tensorflow==2.15.1
 tqdm==4.66.2
-transformers==4.39.3
+transformers==4.38.2
